[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryp"
version = "0.2.0"
dependencies = ["cffi", "pyarrow"]
requires-python = ">=3.8"
authors = [{name = "Michael Wainberg", email = "m.wainberg@utoronto.ca"}]
description = "R inside Python"
readme = "README.md"
license = "MIT"
keywords = ["R", "rpy2", "reticulate", "tidyverse", "ggplot", "ggplot2", "arrow"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

[project.urls]
"Homepage" = "https://github.com/Wainberg/ryp"
"Bug Tracker" = "https://github.com/Wainberg/ryp/issues"
